Register for the event - fixed tests(thenReturn and name of the method)